k8s/immich/microservices.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-microservices
  namespace: immich
spec:
  replicas: 1
  selector:
    matchLabels:
      app: immich-microservices
  template:
    metadata:
      labels:
        app: immich-microservices
    spec:
      serviceAccountName: immich
      containers:
      - name: immich-microservices
        image: ghcr.io/immich-app/immich-server:release
        command:
        - /bin/sh
        args:
        - start-microservices.sh
        volumeMounts:
        - name: library
          mountPath: /usr/src/app/upload
        resources:
          requests:
            memory: "512Mi"
            cpu: "250m"
          limits:
            memory: "2Gi"
            cpu: "2000m"
      volumes:
      - name: library
        persistentVolumeClaim:
          claimName: immich-library-pvc
