k8s/immich/machine-learning.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-machine-learning
  namespace: immich
spec:
  replicas: 1
  selector:
    matchLabels:
      app: immich-machine-learning
  template:
    metadata:
      labels:
        app: immich-machine-learning
    spec:
      runtimeClassName: nvidia
      serviceAccountName: immich
      containers:
      - name: immich-machine-learning
        image: ghcr.io/immich-app/immich-machine-learning:release-cuda
        ports:
        - containerPort: 3003
        volumeMounts:
        - name: cache
          mountPath: /cache
        resources:
          requests:
            nvidia.com/gpu: "1"
            memory: "2Gi"
            cpu: "500m"
          limits:
            nvidia.com/gpu: "1"
            memory: "8Gi"
            cpu: "4000m"
      volumes:
      - name: cache
        persistentVolumeClaim:
          claimName: immich-ml-cache-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: immich-machine-learning
  namespace: immich
spec:
  selector:
    app: immich-machine-learning
  ports:
  - port: 3003
    targetPort: 3003
